--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,8 @@
 
 #0b95fa
 
+#d2316d
+
 */
 
 
@@ -633,92 +635,91 @@ body.pattern4 {
   	-moz-border-radius: 17px; 
   	border-radius: 17px; 
 }
+/*
 #socialicons .icon:hover{
 	background: #0b95fa;
 }
+*/
 
-/*
-.fa-facebook {
-    padding: 10px 14px;
+
+
+#socialicons .googlePlus {
     -o-transition:.3s;
     -ms-transition:.3s;
     -moz-transition:.3s;
     -webkit-transition:.3s;
     transition: .3s;
-    background-color: #000;
-    border-radius: 50px;
 }
 
-
-.fa-facebook:hover {
-    background-color: #3b5998;
-}
-
-
-.fa-google-plus {
-    padding: 10px 11px;
-    -o-transition:.3s;
-    -ms-transition:.3s;
-    -moz-transition:.3s;
-    -webkit-transition:.3s;
-    transition: .3s;
-    background-color: #000;
-    border-radius: 50px;
-}
-
-.fa-google-plus:hover {
+#socialicons .googlePlus:hover {
     background-color: #dd4b39;
 }
 
 
-.fa-linkedin {
-    padding: 10px 11px;
+#socialicons .linkedIn {
     -o-transition:.3s;
     -ms-transition:.3s;
     -moz-transition:.3s;
     -webkit-transition:.3s;
     transition: .3s;
-    background-color: #000;
-    border-radius: 50px;
 }
 
-.fa-linkedin:hover {
+#socialicons .linkedIn:hover {
     background-color: #007bb5;
 }
 
-.fa-github {
-    padding:10px 11px;
+#socialicons .github {
     -o-transition:.3s;
     -ms-transition:.3s;
     -moz-transition:.3s;
     -webkit-transition:.3s;
     transition: .3s;
-    background-color: #000;
-    border-radius: 50px;
 }
 
-.fa-github:hover {
+#socialicons .github:hover {
     background-color: #000000;
 }
 
 
 
 
-.fa-behance {
-    padding:10px 10px;
+#socialicons .behance {
     -o-transition:.3s;
     -ms-transition:.3s;
     -moz-transition:.3s;
     -webkit-transition:.3s;
     transition: .3s;
-    background-color: #000;
-    border-radius: 50px;
 }
 
-.fa-behance:hover {
+#socialicons .behance:hover {
     background-color:  #1769ff;
 }
-*/
+
+
+#socialicons .youtube {
+    -o-transition:.3s;
+    -ms-transition:.3s;
+    -moz-transition:.3s;
+    -webkit-transition:.3s;
+    transition: .3s;
+}
+
+#socialicons .youtube:hover {
+    background-color:  #bb0000;
+}
+
+#socialicons .Pinterest {
+    -o-transition:.3s;
+    -ms-transition:.3s;
+    -moz-transition:.3s;
+    -webkit-transition:.3s;
+    transition: .3s;
+}
+
+#socialicons .Pinterest:hover {
+    background-color:  #cb2027;
+}
+
 
 
 /*
@@ -747,12 +748,14 @@ html, body {
 }
 
 ::selection {
-  background: #d2316d;
+  background: #3dafbe;
   color: #fff;
 }
 
+
+
 ::-moz-selection {
-  background: #d2316d;
+  background: #3dafbe;
   color: #fff;
 }
 
